--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "main.js": "render-page.js",
   "main.js.map": "render-page.js.map",
+  "static/01.jpg": "static/01-06e8f4001a31ba775b2295499dcb40a5.jpg",
   "static/avatar.jpg": "static/avatar-235bd74392c07ac41b5e64acba25c6c0.jpg"
 }
